[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbr-media"
version = "0.2.0"
description = "Portable media infrastructure for Django."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Thomas Belknap" }]
dependencies = [
    "Django>=4.2",
    "Pillow",
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/holisticnetworkingnet/wbr_media"
Repository = "https://github.com/holisticnetworkingnet/wbr_media"
Issues = "https://github.com/holisticnetworkingnet/wbr_media/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wbr_media*"]
exclude = ["demo*", "tests*"]

[tool.setuptools.package-data]
wbr_media = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "demo.demo.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = ["."]